--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -66,7 +66,7 @@ a {
     font-size: 2em;
     letter-spacing: 4px;
     overflow: hidden;
-    background: linear-gradient(90deg, #000, #fff, #000);
+    background: linear-gradient(90deg,#ee7600, #fff, #ee7600);
     background-repeat: no-repeat;
     background-size: 80%;
     animation: animate 3s linear infinite;
